--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       rel="manifest"
       href="https://static.vecteezy.com/system/resources/thumbnails/024/235/881/small/cv-icon-resume-illustration-sign-user-data-symbol-or-logo-vector.jpg"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
